# FatumMarket

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.claude/: tasks
.github/workflows/: dev.yml
apps/address/: apps.py  models.py  signals.py  tasks.py
apps/address/domain/: address_manager.py  geocoding.py  schema.py
apps/address/migrations/: 0001_initial.py  0002_alter_address_created_at_alter_address_updated_at.py  0003_historicaladdress.py  0004_delete_historicaladdress.py  0005_remove_address_address_remove_address_geolocation_and_more.py
apps/delivery/: apps.py
apps/delivery/domain/: delivery_creators.py  schema.py
apps/delivery/domian/: manager.py  schema.py
apps/delivery/migrations/: 0001_initial.py  0002_delivery_order_alter_delivery_comment_and_more.py  0002_initial.py  0003_initial.py  0003_remove_delivery_user_delivery_recipient_and_more.py  0004_courierdeliveryprice.py  0004_historicaldelivery.py  0005_pickupplace.py  0005_remove_delivery_urgency_and_more.py  0006_courierdeliveryprice_position_pickupplace_position_and_more.py  (+4 more)
apps/orders/: apps.py  signals.py
apps/products/: apps.py
apps/supply/: apps.py  models.py
apps/users/: apps.py  backends.py  forms.py  signals.py  urls.py  validators.py  views.py
base/: for_model.py  manager.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/docker/: docker-compose.yaml  supervisord.conf
config/nginx/: nginx.conf
interfaces/admin/: jazzmin_settings.py
interfaces/market/: cart_utils.py  context_processors.py  urls.py
(+136 files in other folders)
