[project]
name = "fatummarket"
version = "0.1.0"
description = "FatumMarket Backend API"
requires-python = ">=3.13"
dependencies = [
    "Django>=6.0.0",
    "djangorestframework==3.14.0",
    "python-dotenv==1.0.0",
    "django-cors-headers==4.3.1",
    "django-filter>=25.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.0.0",
    "django-jazzmin>=3.0.0",
    "django-google-maps>=0.14.0",
    "django-mptt>=0.18.0",
    "django-phonenumber-field>=8.4.0",
    "django-simple-history>=3.10.0",
    "django-admin-rangefilter>=0.13.0",
    "django-js-asset>=3.1.0",
    "Pillow>=12.0.0",
    "phonenumbers>=9.0.0",
    "requests>=2.31.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

